Improves UI, fixes context menu, adds auto-sizing
Enhances the UI by adjusting button border radius and gradient colors for a more polished look.

Addresses a touch event handling issue in the context menu, preventing unintended default behaviors on mobile devices.

Introduces auto-sizing functionality to the IceRink component and implements an overscroll callback.
This enables dynamic resizing based on content and provides a mechanism for handling and responding to overscroll events.

Adds animation timer for scrollbar

--- a/ui/frontend/core/sk_ui_button/sk_ui_button.css
+++ b/ui/frontend/core/sk_ui_button/sk_ui_button.css
@@ -55,7 +55,7 @@
 
 .sk_ui_button.normal {
     background-color: var(--sk_ui_color_dark_grey_2);
-    border-radius: 6px;
+    border-radius: 8px;
 }
 
 .sk_ui_button.normal:hover {
@@ -111,7 +111,7 @@
 }
 
 .sk_ui_button_style_action {
-    border-radius: 6px;
+    border-radius: 8px;
     background-color: var(--sk_ui_color_dark_grey);
     
 }
@@ -123,7 +123,7 @@
 
 .sk_ui_button_appearance_action {
     background-color: var(--sk_ui_color_dark_grey_2);
-    border-radius: 6px;
+    border-radius: 8px;
 }
 
 
